--- a/TP0- Tareas/estilo.css
+++ b/TP0- Tareas/estilo.css
@@ -4,7 +4,6 @@ body {
 	font-size: 16px;
 	font-family: Arial, Helvetica, sans-serif;
 	line-height: 1.5;
-	background-color: black;
 	color: white;
   }
   
@@ -12,7 +11,6 @@ body {
 	text-align: center;
 	color: rgb(69, 47, 79);
   }
-  
   .container {
 	margin-top: 30px;
 	margin-bottom: 30px;
@@ -22,8 +20,6 @@ body {
 	background-color: white;
 	padding: 30px;
   }
-  
-  
   form {
 	display: flex;
   }
@@ -33,7 +29,6 @@ body {
 	outline: none;
 	width: 400px;
   }
-  
   .lista-contenedor {
 	width: 100%;
 	color: darkslategray;
@@ -46,35 +41,40 @@ body {
     list-style: none;
 }
 
-div#div{
-	display: flex;
-	flex-direction: row;
-}
 
-input[type="checkbox"]:checked{
-    margin-right: 1rem;
-
-}
 
 button{
     font-size: 1.2rem;
     border: 1px solid black;
 	margin-left: 1rem;
+	display: flex;
 }
   
-lista {
+  
+p {
+	margin: 0;
+	padding: 15px;
+	width: 100%;
+  }
+  li {
 	list-style: none;
 	background-color: lightgray;
 	border-radius: 10px;
 	margin-top: 15px;
 	display: flex;
   }
-  
-  lista parrafo {
-	margin: 0;
-	padding: 15px;
-	width: 100%;
-  }
+  input[type="checkbox"]{
+    margin-bottom: 50px;
+	font-size: 1.2rem;
+    border: 1px solid black;
+	margin-right: 1rem;
+	display: flex;
+}
 
+
+input[type="checkbox"]:checked+p{
+    text-decoration: line-through;
+	
+}
  
   
