--- a/TP0- Tareas/estilo.css
+++ b/TP0- Tareas/estilo.css
@@ -63,12 +63,13 @@ p {
 	margin-top: 15px;
 	display: flex;
   }
-  input[type="checkbox"]{
-    margin-bottom: 50px;
-	font-size: 1.2rem;
-    border: 1px solid black;
-	margin-right: 1rem;
+input[type="checkbox"]{
+   
 	display: flex;
+	margin-right: 30px;
+    width: 20px;
+    height: 20px;
+
 }
 
 
